--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ body{
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
+	
+	/*socks at bottom*/
+	background-image: url("http://giantnortheast.com/wp-content/uploads/2014/03/socks.jpg");
+	background-repeat: no-repeat;
+	background-position: right bottom;
 }
 
 h1{
