--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,30 @@
 #container{
-	background-color: red;
+	/*light redish color*/
+	background-color: #FFCCCC;
 	
 }
 
 #footer{
-	background-color: blue;
-	height:25px;
+	/*light blue*/
+	background-color: #CCFFFF;
 }
 
-#navBar{
-	background-color: green;
-	height:25px;
-}
-
-#logo{
-	background-color: yellow;
+#topbar{
+	background-color: #CCFFFF;
 	height:100px;
 }
 
-.content{
+#navBar{
 
+}
+
+#logo{
+	float: left;
+
+}
+
+.content{
+clear:both
 }
 
 .navBarButton{
@@ -28,8 +33,8 @@
 }
 
 body{
-	/*light brownish color*/
-	background-color: #FFFFCC;
+	
+	background-color: white;
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
