--- a/css/style.css
+++ b/css/style.css
@@ -15,23 +15,33 @@
 	height:100px;
 }
 
-#navBar{
-
-}
-
-#logo{
+#navWrapper{
+	position: relative;
 	float: left;
-
+	height:100%;
+	width:50%;
 }
 
-.content{
-clear:both
+#navBar{
+	position: absolute;
+	bottom:0;
+	left:0;
 }
 
 .navBarButton{
 	float: left;
 	padding: 5px;
 }
+
+#logo{
+	float: left;
+}
+
+.content{
+clear:both;
+}
+
+
 
 body{
 	
