--- a/css/style.css
+++ b/css/style.css
@@ -26,14 +26,15 @@
 	font-weight: bold;
 }
 #navBar a{
-	padding-left:40px;
-	padding-right:40px;
+	padding-left:42px;
+	padding-right:42px;
 	border-left: thin solid #000000;
 	text-decoration: none !important;
 	color: #000000;
 }
 #navBar .edge{
 	border:none;
+	padding-left:35px;
 }
 
 #logo{
@@ -43,14 +44,11 @@
 }
 
 .content{
-clear:both;
+  clear:both;
+	padding-left: 50px;
 }
 
-
-
 body{
-
-	background-color: white;
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
@@ -62,9 +60,15 @@ body{
 }
 
 h1{
-
 }
 
 p{
+	padding-left: 25px;/*+50px from .content*/
+	padding-right: 25px;
+}
 
+ul{
+	padding-top: 10px;
+	padding-left: 50px;/*+50px from .content*/
+	padding-right: 25px;
 }
