Fixed Socks in bottom right corner to corner of browser window, and not the page itself

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body{
 	background-image: url("../images/socks.png");
 	background-repeat: no-repeat;
 	background-position: right bottom;
+	background-attachment: fixed;
 }
 
 h1{
