--- a/css/feedbackForm.css
+++ b/css/feedbackForm.css
@@ -8,15 +8,23 @@ p.tablerow{
 label { 
 	display: table-cell;
 	text-align: right;
+	width:30%;
 }
 input { 
 	display: table-cell;
+	width: 100%;
 }
 
 textarea {
 	display: table-cell;
+	width: 100%;
+}
+
+span.buttoncell{
+	display: table-cell;
+	width: 30%;
 }
 
 button{
-	display: table-cell;
+
 }
