--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,22 @@
 #container{
 	/*light redish color*/
 	background-color: #FFCCCC;
+	padding-bottom:350
+}
 
+.wrap {
+	position:relative;
+	margin:0 auto;
+               /*replace 900px with your width*/
+	width:900px;
 }
 
 #footer{
 	/*light blue*/
 	background-color: #CCFFFF;
 	text-align: center;
+	width:100%;
+	float:left;
 }
 
 #topbar{
