--- a/css/feedbackForm.css
+++ b/css/feedbackForm.css
@@ -3,18 +3,23 @@ form  {
 	width: 500px;
 }
 p.tablerow{ 
-	display: table-row;  
+	display: table-row;
 }
 label { 
 	display: table-cell;
 	text-align: right;
 	width:30%;
+	vertical-align: top;
 }
 input { 
 	display: table-cell;
 	width: 100%;
 }
 
+.cb{
+	display: table-cell;
+	width: 20px;
+}
 textarea {
 	display: table-cell;
 	width: 100%;
@@ -27,4 +32,8 @@ span.buttoncell{
 
 button{
 
+}
+
+#Error{
+	color: red;
 }
